--- a/packaging/linux/Arch/PKGBUILD
+++ b/packaging/linux/Arch/PKGBUILD
@@ -50,6 +50,7 @@ depends=(
   'openssl'
   'opus'
   'udev'
+  'vulkan-icd-loader'
   'which'
 )
 
@@ -63,6 +64,7 @@ makedepends=(
   'make'
   'nodejs'
   'npm'
+  'vulkan-headers'
 )
 
 checkdepends=(
